--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1664,8 +1664,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_tv80surp2jhgv50r0pyl(i, j, css_id) {
-          var table = document.getElementById("tinytable_tv80surp2jhgv50r0pyl");
+      function styleCell_cb5v7h5db6cvz8en8660(i, j, css_id) {
+          var table = document.getElementById("tinytable_cb5v7h5db6cvz8en8660");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1674,8 +1674,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_tv80surp2jhgv50r0pyl(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_tv80surp2jhgv50r0pyl");
+      function spanCell_cb5v7h5db6cvz8en8660(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_cb5v7h5db6cvz8en8660");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1706,26 +1706,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_530dhimcqzegj8d0heki',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_lxseh41glzp6fecsyutm',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_udy7vr24b3s6vr53fshs',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_6xuntlt4ia8gnwrhvdi9',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_086qnykmecdkdqgsskq4',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_gsdohzg9iwmoti55qggx',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_q0f48ypb4di98gp84d1g',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_lspplr6no9rixgvh2jzl',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_7eblw8wuhnzdkfvaez85',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_oiy3ptzbmcoos942u4y3',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_2g4ufltdqrxzobwbx4eg',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_2f721d07yhm8017eybgl',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ssu723q2roc7jyyrooqb',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_wl4fmvxl3y2ss8486ifv',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_groka2w7y0v7c54ftznm',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_ikdd6691x38urat02kin',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_h12fq3djqhi9yxy33vo2',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_yhj0kvm1udgee5yto4bh',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_5myp9g1xct1wba0c6dgh',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_9n0ujjxtvkj1q8cpq7ox',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_byxjsjt63q7yw5wbyw2d',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_oeu15j0gb68r0xltqn9k',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_cuktyojgiq4f0iv82ai5',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_c2ienmiqhzbiab26k0d2',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_bf0r2vbpxtasnwzbomfr',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_dnyt6p60dlfo9dobxfvs',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ch1c4mymyqcqew9gzwrc',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_p39fp64sbs96ru1b70ai',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_tv80surp2jhgv50r0pyl(cell.i, cell.j, group.css_id);
+                  styleCell_cb5v7h5db6cvz8en8660(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1733,23 +1733,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_530dhimcqzegj8d0heki, .table th.tinytable_css_530dhimcqzegj8d0heki { text-align: center; text-align: center; }
-      .table td.tinytable_css_lxseh41glzp6fecsyutm, .table th.tinytable_css_lxseh41glzp6fecsyutm { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_udy7vr24b3s6vr53fshs, .table th.tinytable_css_udy7vr24b3s6vr53fshs { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_6xuntlt4ia8gnwrhvdi9, .table th.tinytable_css_6xuntlt4ia8gnwrhvdi9 { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_086qnykmecdkdqgsskq4, .table th.tinytable_css_086qnykmecdkdqgsskq4 { text-align: center; }
-      .table td.tinytable_css_gsdohzg9iwmoti55qggx, .table th.tinytable_css_gsdohzg9iwmoti55qggx { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_q0f48ypb4di98gp84d1g, .table th.tinytable_css_q0f48ypb4di98gp84d1g { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_lspplr6no9rixgvh2jzl, .table th.tinytable_css_lspplr6no9rixgvh2jzl { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_7eblw8wuhnzdkfvaez85, .table th.tinytable_css_7eblw8wuhnzdkfvaez85 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_oiy3ptzbmcoos942u4y3, .table th.tinytable_css_oiy3ptzbmcoos942u4y3 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_2g4ufltdqrxzobwbx4eg, .table th.tinytable_css_2g4ufltdqrxzobwbx4eg { text-align: left; }
-      .table td.tinytable_css_2f721d07yhm8017eybgl, .table th.tinytable_css_2f721d07yhm8017eybgl { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_ssu723q2roc7jyyrooqb, .table th.tinytable_css_ssu723q2roc7jyyrooqb { text-align: left; text-align: center; }
-      .table td.tinytable_css_wl4fmvxl3y2ss8486ifv, .table th.tinytable_css_wl4fmvxl3y2ss8486ifv { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_groka2w7y0v7c54ftznm, .table th.tinytable_css_groka2w7y0v7c54ftznm { text-align: center; text-align: center; }
+      .table td.tinytable_css_ikdd6691x38urat02kin, .table th.tinytable_css_ikdd6691x38urat02kin { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_h12fq3djqhi9yxy33vo2, .table th.tinytable_css_h12fq3djqhi9yxy33vo2 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_yhj0kvm1udgee5yto4bh, .table th.tinytable_css_yhj0kvm1udgee5yto4bh { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_5myp9g1xct1wba0c6dgh, .table th.tinytable_css_5myp9g1xct1wba0c6dgh { text-align: center; }
+      .table td.tinytable_css_9n0ujjxtvkj1q8cpq7ox, .table th.tinytable_css_9n0ujjxtvkj1q8cpq7ox { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_byxjsjt63q7yw5wbyw2d, .table th.tinytable_css_byxjsjt63q7yw5wbyw2d { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_oeu15j0gb68r0xltqn9k, .table th.tinytable_css_oeu15j0gb68r0xltqn9k { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_cuktyojgiq4f0iv82ai5, .table th.tinytable_css_cuktyojgiq4f0iv82ai5 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_c2ienmiqhzbiab26k0d2, .table th.tinytable_css_c2ienmiqhzbiab26k0d2 { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_bf0r2vbpxtasnwzbomfr, .table th.tinytable_css_bf0r2vbpxtasnwzbomfr { text-align: left; }
+      .table td.tinytable_css_dnyt6p60dlfo9dobxfvs, .table th.tinytable_css_dnyt6p60dlfo9dobxfvs { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_ch1c4mymyqcqew9gzwrc, .table th.tinytable_css_ch1c4mymyqcqew9gzwrc { text-align: left; text-align: center; }
+      .table td.tinytable_css_p39fp64sbs96ru1b70ai, .table th.tinytable_css_p39fp64sbs96ru1b70ai { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_tv80surp2jhgv50r0pyl" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_cb5v7h5db6cvz8en8660" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -1928,17 +1928,17 @@ Full code you can adapt for the assessment
 <li>then estimate emergence and survival separately and work with those separately estimated models to calculate predicted probabilities and ROC curves</li>
 </ul>
 </div>
-<p>So, what’s the setup? Again, we are incorporating the lagged value <span class="math inline">\(y_{t-1}\)</span>, to encapsulate all the history prior to period <span class="math inline">\(t\)</span>. There is just one little trick I need to introduce before we can start on the model: I will replace <span class="math inline">\(y_{t-1}\)</span> by an indicator variable <span class="math inline">\(I_{D}\)</span> in Equation <a href="#eq-interactionmodel" class="quarto-xref">Equation&nbsp;<span>1</span></a> which assumes the value 1 if a country was a democracy in the previous year, and zero otherwise (notation adapted from Epstein et al., 2006, p.&nbsp;553). Following on from this, we can write the model as follows<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>:</p>
+<p>So, what’s the setup? Again, we are incorporating the lagged value <span class="math inline">\(y_{t-1}\)</span>, to encapsulate all the history prior to period <span class="math inline">\(t\)</span>. There is just one little trick I need to introduce before we can start on the model: I will replace <span class="math inline">\(y_{t-1}\)</span> by an indicator variable <span class="math inline">\(I_{D}\)</span> in <a href="#eq-interactionmodel" class="quarto-xref">Equation&nbsp;<span>1</span></a> which assumes the value 1 if a country was a democracy in the previous year, and zero otherwise (notation adapted from Epstein et al., 2006, p.&nbsp;553). Following on from this, we can write the model as follows<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>:</p>
 <p><span id="eq-interactionmodel"><span class="math display">\[
 P(D_{i,t}) = \Phi(\beta_{0}+\beta_{1} X_{i,t} + \beta_{2} I_{D} + \beta_{3} I_{D} X_{i,t} + \epsilon_{i,t})
 \qquad(1)\]</span></span></p>
 <p>where <span class="math inline">\(P(D_{it})\)</span> is the probability that a country <span class="math inline">\(i\)</span> was a democracy in year <span class="math inline">\(t\)</span>, <span class="math inline">\(\Phi\)</span> is the cumulative normal distribution (the s-shaped distribution which you know from the introduction of probit in week 3), <span class="math inline">\(I_{D}\)</span> the aforementioned indicator variable, <span class="math inline">\(X_{i,t}\)</span> is an independent variable for country <span class="math inline">\(i\)</span> in year <span class="math inline">\(t\)</span>, and <span class="math inline">\(\epsilon_{i,t}\)</span> is a zero mean stochastic disturbance (I only include this for completeness’ sake here. As this is irrelevant for us here and now, I will drop this from the following discussion, not to confuse you unnecessarily). This model is a multiplicative interaction model which allow us to model the probability of a country to be a democracy, <em>conditional</em> on its regime type in the previous year. The indicator variable <span class="math inline">\(I_{D}\)</span>, equal to <span class="math inline">\(y_{t-1}\)</span> captures this information. How does this work?</p>
-<p>Let us start by assuming that in year <span class="math inline">\(t-1\)</span> country <span class="math inline">\(i\)</span> was an autocracy. In this case, the indicator variable <span class="math inline">\(I_{D}\)</span> would be equal to zero, and therefore Equation <a href="#eq-interactionmodel" class="quarto-xref">Equation&nbsp;<span>1</span></a> can be re-written as</p>
+<p>Let us start by assuming that in year <span class="math inline">\(t-1\)</span> country <span class="math inline">\(i\)</span> was an autocracy. In this case, the indicator variable <span class="math inline">\(I_{D}\)</span> would be equal to zero, and therefore <a href="#eq-interactionmodel" class="quarto-xref">Equation&nbsp;<span>1</span></a> can be re-written as</p>
 <p><span class="math display">\[\begin{equation}
 P(D_{i,t})=\Phi(\beta_{0}+\beta_{1} X_{i,t})
 \end{equation}\]</span></p>
 <p>In this case, the coefficient <span class="math inline">\(\beta_{1}\)</span> would only represent the impact of variable <span class="math inline">\(X_{i,t}\)</span> on the probability of an autocracy transitioning to democracy. Expressed more formally, we are dealing with conditional probabilities here, in the case of <span class="math inline">\(\beta_{1}\)</span>, we would obtain the impact of variable <span class="math inline">\(X_{i,t}\)</span> on a country to be a democracy in year <span class="math inline">\(t\)</span>, <em>under the condition</em> that it was an autocracy in year <span class="math inline">\(t-1\)</span>. It is conditional on this, because we set the indicator variable to zero before.</p>
-<p>We can construct a similar scenario for the condition, that a country was a democracy in the previous year. In this case, the indicator variable <span class="math inline">\(I_{D}\)</span> would be equal to <span class="math inline">\(1\)</span>, and we would obtain equation <a href="#eq-interactionmodel" class="quarto-xref">Equation&nbsp;<span>1</span></a> again:</p>
+<p>We can construct a similar scenario for the condition, that a country was a democracy in the previous year. In this case, the indicator variable <span class="math inline">\(I_{D}\)</span> would be equal to <span class="math inline">\(1\)</span>, and we would obtain <a href="#eq-interactionmodel" class="quarto-xref">Equation&nbsp;<span>1</span></a> again:</p>
 <p><span class="math display">\[\begin{equation*}
 P(D_{i,t})=\Phi(\beta_{0}+\beta_{1} X_{i,t} +\beta_{2} I_{D} + \beta_{3} I_{D} X_{i,t})
 \end{equation*}\]</span></p>
