--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -445,14 +445,14 @@ Figure&nbsp;2: Effect of Budget on Propensity to Go Out
 </div>
 <p>&nbsp;</p>
 <p>Whilst this visualises the influence of the budget on the latent variable, what we are aiming for is to make a prediction about the probability of you going out, or not.</p>
-<p>Now imagine, your budget is <span class="math inline">\(x_{1}\)</span>. The regression line depicts the propensity that we would expect to see, on average, for somebody with a budget of <span class="math inline">\(x_{1}\)</span>. But the crucial point is that not everybody is average. Some might have an essay deadline approaching which makes them even less likely to go out. Others might just have received their essay mark, and want to celebrate that they scored a first. In other words, there is variability around the regression line. And we assume that whilst this variability is random, it still follows a particular distribution. In the case of a probit, this is the normal distribution<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. I have added these distributions to <span class="quarto-unresolved-ref">?fig-towcdf</span>.</p>
+<p>Now imagine, your budget is <span class="math inline">\(x_{1}\)</span>. The regression line depicts the propensity that we would expect to see, on average, for somebody with a budget of <span class="math inline">\(x_{1}\)</span>. But the crucial point is that not everybody is average. Some might have an essay deadline approaching which makes them even less likely to go out. Others might just have received their essay mark, and want to celebrate that they scored a first. In other words, there is variability around the regression line. And we assume that whilst this variability is random, it still follows a particular distribution. In the case of a probit, this is the normal distribution<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. I have added these distributions to <a href="#fig-towcdf" class="quarto-xref">Figure&nbsp;<span>3</span></a>.</p>
 <p>&nbsp; &nbsp;</p>
-<div id="fig-out" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
+<div id="fig-towcdf" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-out-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div aria-describedby="fig-towcdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="images/Week 3/prop1.png" class="img-fluid quarto-figure quarto-figure-center figure-img" style="width:70.0%">
 </div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-out-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-towcdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;3: Towards the Cumulative Density Function, adapted from <span class="citation" data-cites="scott:1997">Long (1997, p. 46)</span>
 </figcaption>
 </figure>
@@ -835,8 +835,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_bn05kiwjyae384uo54l1(i, j, css_id) {
-          var table = document.getElementById("tinytable_bn05kiwjyae384uo54l1");
+      function styleCell_b36rorji5844tn04iuq6(i, j, css_id) {
+          var table = document.getElementById("tinytable_b36rorji5844tn04iuq6");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -845,8 +845,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_bn05kiwjyae384uo54l1(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_bn05kiwjyae384uo54l1");
+      function spanCell_b36rorji5844tn04iuq6(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_b36rorji5844tn04iuq6");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -877,20 +877,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_i93tb1zevk1ln11n3cfv',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_udje2jo8zow48sezxodb',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_ptf5cym4fmiy34dal2g0',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_ahajpq3b3b6qjv0yo3sw',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_dzizyfc7ure4aqlko5lo',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_8ujmp4y3hlm6y4uoe4ps',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_eguu6cjq8qk3han9zlf0',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_jbxb0c1mc3egtdeybr0a',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_2rsw8ilx7kscxmtkqcgt',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_kie57n2qujq4y3jd4fsx',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_ejgdo83mmyv0h9im0i0x',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_3vtfokb42oe7jn0xvwcy',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_06c77zztyohmhtsa0kjy',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_kww4q8a3mlcegvauhk8u',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ug9s8y63z55l2vq4emvb',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_q9cmbviejzoed17us5c4',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_bn05kiwjyae384uo54l1(cell.i, cell.j, group.css_id);
+                  styleCell_b36rorji5844tn04iuq6(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -898,17 +898,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_i93tb1zevk1ln11n3cfv, .table th.tinytable_css_i93tb1zevk1ln11n3cfv { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_udje2jo8zow48sezxodb, .table th.tinytable_css_udje2jo8zow48sezxodb { text-align: center; }
-      .table td.tinytable_css_ptf5cym4fmiy34dal2g0, .table th.tinytable_css_ptf5cym4fmiy34dal2g0 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ahajpq3b3b6qjv0yo3sw, .table th.tinytable_css_ahajpq3b3b6qjv0yo3sw { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_dzizyfc7ure4aqlko5lo, .table th.tinytable_css_dzizyfc7ure4aqlko5lo { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_8ujmp4y3hlm6y4uoe4ps, .table th.tinytable_css_8ujmp4y3hlm6y4uoe4ps { text-align: left; }
-      .table td.tinytable_css_eguu6cjq8qk3han9zlf0, .table th.tinytable_css_eguu6cjq8qk3han9zlf0 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_jbxb0c1mc3egtdeybr0a, .table th.tinytable_css_jbxb0c1mc3egtdeybr0a { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_2rsw8ilx7kscxmtkqcgt, .table th.tinytable_css_2rsw8ilx7kscxmtkqcgt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_kie57n2qujq4y3jd4fsx, .table th.tinytable_css_kie57n2qujq4y3jd4fsx { text-align: center; }
+      .table td.tinytable_css_ejgdo83mmyv0h9im0i0x, .table th.tinytable_css_ejgdo83mmyv0h9im0i0x { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_3vtfokb42oe7jn0xvwcy, .table th.tinytable_css_3vtfokb42oe7jn0xvwcy { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_06c77zztyohmhtsa0kjy, .table th.tinytable_css_06c77zztyohmhtsa0kjy { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_kww4q8a3mlcegvauhk8u, .table th.tinytable_css_kww4q8a3mlcegvauhk8u { text-align: left; }
+      .table td.tinytable_css_ug9s8y63z55l2vq4emvb, .table th.tinytable_css_ug9s8y63z55l2vq4emvb { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_q9cmbviejzoed17us5c4, .table th.tinytable_css_q9cmbviejzoed17us5c4 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_bn05kiwjyae384uo54l1" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_b36rorji5844tn04iuq6" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -1012,8 +1012,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_ne44vbv3amxeml7mph0b(i, j, css_id) {
-          var table = document.getElementById("tinytable_ne44vbv3amxeml7mph0b");
+      function styleCell_tzvtdt1jmn90rzq1aij6(i, j, css_id) {
+          var table = document.getElementById("tinytable_tzvtdt1jmn90rzq1aij6");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1022,8 +1022,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_ne44vbv3amxeml7mph0b(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_ne44vbv3amxeml7mph0b");
+      function spanCell_tzvtdt1jmn90rzq1aij6(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_tzvtdt1jmn90rzq1aij6");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1054,20 +1054,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_81738jd9dysfggx7ulys',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_cjbzak4mfiyclf7eepf9',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_1ydpeotwsdcxx3g1b6sx',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_hmyubjwv5dyfarczok77',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_7hhejgnl335mfw79eals',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_od7p4ok0e5w093y69vgf',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_8gwzy6lzfq6j5lwvuqda',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_2ye2qkdc6xwgo4k0fcby',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_vfag8oz02ct26q7cijlv',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_6wraqtump5zy3m78xdny',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_xoqbjnkwmhz6eah7ktx6',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_4dnd2drtzhd2w5n7htdc',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_sgsh7samni0g1q1fa2s6',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_deoyfnl3x4hfdd0u7i1h',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_81jlhabx8p880xwimpwa',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_mr51dfv4ejmw7ghkmomr',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_ne44vbv3amxeml7mph0b(cell.i, cell.j, group.css_id);
+                  styleCell_tzvtdt1jmn90rzq1aij6(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1075,17 +1075,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_81738jd9dysfggx7ulys, .table th.tinytable_css_81738jd9dysfggx7ulys { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_cjbzak4mfiyclf7eepf9, .table th.tinytable_css_cjbzak4mfiyclf7eepf9 { text-align: center; }
-      .table td.tinytable_css_1ydpeotwsdcxx3g1b6sx, .table th.tinytable_css_1ydpeotwsdcxx3g1b6sx { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_hmyubjwv5dyfarczok77, .table th.tinytable_css_hmyubjwv5dyfarczok77 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_7hhejgnl335mfw79eals, .table th.tinytable_css_7hhejgnl335mfw79eals { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_od7p4ok0e5w093y69vgf, .table th.tinytable_css_od7p4ok0e5w093y69vgf { text-align: left; }
-      .table td.tinytable_css_8gwzy6lzfq6j5lwvuqda, .table th.tinytable_css_8gwzy6lzfq6j5lwvuqda { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_2ye2qkdc6xwgo4k0fcby, .table th.tinytable_css_2ye2qkdc6xwgo4k0fcby { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_vfag8oz02ct26q7cijlv, .table th.tinytable_css_vfag8oz02ct26q7cijlv { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_6wraqtump5zy3m78xdny, .table th.tinytable_css_6wraqtump5zy3m78xdny { text-align: center; }
+      .table td.tinytable_css_xoqbjnkwmhz6eah7ktx6, .table th.tinytable_css_xoqbjnkwmhz6eah7ktx6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4dnd2drtzhd2w5n7htdc, .table th.tinytable_css_4dnd2drtzhd2w5n7htdc { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_sgsh7samni0g1q1fa2s6, .table th.tinytable_css_sgsh7samni0g1q1fa2s6 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_deoyfnl3x4hfdd0u7i1h, .table th.tinytable_css_deoyfnl3x4hfdd0u7i1h { text-align: left; }
+      .table td.tinytable_css_81jlhabx8p880xwimpwa, .table th.tinytable_css_81jlhabx8p880xwimpwa { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_mr51dfv4ejmw7ghkmomr, .table th.tinytable_css_mr51dfv4ejmw7ghkmomr { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_ne44vbv3amxeml7mph0b" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_tzvtdt1jmn90rzq1aij6" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
